--- a/css/GF_logistics.css
+++ b/css/GF_logistics.css
@@ -8,7 +8,8 @@
 .custom-tooltip .tooltip-inner {
     background: rgb(112, 201, 236);
     max-width: 40px;
-    padding: 3px 8px;
+    width: 40px;
+    padding: 3px 0px;
     color: #fff;
     text-align: center;
     border-radius: 4px;
@@ -218,3 +219,8 @@ div[slider]>input[type=range]::-ms-tooltip {
 button:disabled {
     background: #DADADA;
 }
+
+/* .collapsing{
+    -webkit-transition: none;
+    transition: none;
+} */
