--- a/css/GF_logistics_slider.css
+++ b/css/GF_logistics_slider.css
@@ -211,12 +211,6 @@ div[slider]>input[type=range]::-ms-tooltip {
     border-top-color: rgb(112, 201, 236);
 }
 
-[slider]>div>[sign]>span {
-    font-size: 11px;
-    font-weight: 700;
-    line-height: 28px;
-}
-
 [slider]:hover>div>[sign] {
     opacity: 1;
 }
@@ -230,7 +224,7 @@ div[slider]>input[type=range]::-ms-tooltip {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 0px;
+    font-size: 0;
     margin: -4px -7px;
     border-radius: 100%;
     cursor: pointer;
