--- a/css/GF_logistics.css
+++ b/css/GF_logistics.css
@@ -224,6 +224,7 @@ input[type="number"] {
 .plan-details-table th,
 .plan-details-table td {
     padding: 0.2rem;
+    cursor: auto;
 }
 
 /*分辨率样式*/
