replace alert and confirm and prompt with modal

--- a/css/GF_logistics_slider.css
+++ b/css/GF_logistics_slider.css
@@ -30,6 +30,10 @@
     border-right-color: #007bff;
 }
 
+[slider] .custom-tooltip {
+    z-index: 100;
+}
+
 .custom-tooltip {
     display: inline-block;
     margin: 10px 20px;
