--- a/css/group.css
+++ b/css/group.css
@@ -71,6 +71,9 @@
 .list-group-item:last-child {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
+}
+
+.Saved-List>.list-group-item:last-child {
     border-bottom-width: 0;
 }
 
